--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,25 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+# dependencies
+node_modules
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# builds
+dist
+build
+
+# logs
+logs
+*.log
+pnpm-debug.log*
+
+# editor
+.vscode
+.idea
+
+# system
+.DS_Store
+Thumbs.db
